--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 	justify-content: space-around;
 	align-items: center;
 	font-size: 50px;
-	font-family: "F Grotesk";
+	font-family: Helvetica;
 	text-align: center;
 	color: #aaa;
 	overflow: hidden;
