--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,6 @@ body {
 	animation-iteration-count: infinite;  
     animation-duration: 86400s;
 	animation-delay: 0;
-	display: flex;
-	width: 100%;
-	height: 100%;
-	flex-flow: row nowrap;
-	justify-content: space-around;
-	align-items: center;
 	font-size: 50px;
 	font-family: Helvetica;
 	text-align: center;
@@ -17,11 +11,42 @@ body {
 	transition: 0.2s;
 }
 
+.clock {
+	position: relative;
+	margin: 0 auto;
+	top: 20px;
+	font-size: 14px;
+	letter-spacing: 0.03em;
+}
+
+#sun {
+	width: 100px;
+	height: 100px;
+	background: rgba(245,245,255,1);
+	-webkit-box-shadow: 0px 0px 40px 20px rgba(245,245,255,1);
+	-moz-box-shadow: 0px 0px 40px 20px rgba(245,245,255,1);
+	box-shadow: 0px 0px 40px 20px rgba(245,245,255,1);
+	border-radius: 50%;
+	position: fixed;
+	z-index: 1;
+	margin-top: 230px;
+	margin-left: 200px;
+}
+
 a {
 	text-decoration: none;
 	font-size: inherit;
 	color: inherit;
 	padding: 20px;
+}
+
+#flexBox {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content: space-around;
+	align-items: center;
 }
 
 #one, #two, #three {
@@ -57,7 +82,6 @@ a {
 
 #three {
 	order: 3;
-
 }
 
 @-webkit-keyframes daylight {  
